@@ -1,8 +1,8 @@
 package edu.java.model;
 
 import edu.java.model.Request.LinkUpdateRequest;
-import java.net.MalformedURLException;
-import java.net.URL;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.util.List;
 import org.springframework.web.reactive.function.client.WebClient;
 import reactor.core.publisher.Mono;
@@ -16,8 +16,8 @@ public class BotClient {
         this.webClient = webClient;
     }
 
-    public String updateLink(String url, List<Long> tgChatIds) throws MalformedURLException {
-        LinkUpdateRequest linkUpdateRequest = new LinkUpdateRequest(1L, new URL(url), "Обновление ссылки", tgChatIds);
+    public String updateLink(String url, List<Long> tgChatIds) throws URISyntaxException {
+        LinkUpdateRequest linkUpdateRequest = new LinkUpdateRequest(1L, new URI(url), "Обновление ссылки", tgChatIds);
 
         return webClient
             .post()
